--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -11,7 +11,7 @@
     .mainText{
         color: var(--blackcolor);
         width: 40%;
-        margin-left: 40%;
+        margin-left: 30%;
         margin-top: -60px;
         font-weight: 700;
         font-size: 18px;
@@ -32,14 +32,18 @@
 
     }
     .video{
-        margin-left: 20%;
-            pointer-events: none;
-            border-radius: 10rem;
-            margin-bottom: 15%;
+        position: fixed;
+        z-index: -1;
+        width: 100%;
+         pointer-events: none;
+        border-radius: 40%;
+         margin-bottom: 15%;
         }
         
-        .plane{
-    width: 50%;   
-    height: 50%;   
+    .plane{
+    width: 100%;   
+    height: 100%;   
     top: -10%; 
+    margin-left: 27rem;
+    margin-top: 9%;
             } 
