--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,7 +1,68 @@
-.navbarFlex{
-    text-align: center;
-   position: fixed;
+.flexBox{
+    position: fixed;
+    padding: 0%;
+    background-color: white;
 }
+.flex1{
+    background-color:rgb(161, 160, 160);
+    padding: .5rem;
+}
+.support_flex{
+    margin-left: 15rem;
+    margin-right: 2rem;
+}
+.firstNavbar{
+    width: 100%;
+    display: flex;
+    text-align: center;
+    margin-left: 5rem;
+
+}
+.support{
+}
+.secondNavbar{
+    background-color: white;
+    padding: 1rem;
+    display: flex;
+}
+.secondNavbar_text{
+    display: flex;
+    list-style: none;
+    gap: 2rem;
+    padding-top: 4px;
+    list-style: none;
+    margin-left:25rem ;
+}
+.links {
+    text-decoration: none;
+    color: black;
+    width: 2px;
+}
+.secondPart{
+    display: flex;
+}
+.navbarImag{
+    margin-top: -15px;
+    height: 55px;
+    width: 70px;
+}
+.login_flex{
+    gap: 4%;
+}
+.signin{
+    margin-left: 35rem;
+    margin-right: 2rem;
+
+}
+.signout{
+    margin-right: 7rem;
+}
+.btn{
+    padding:.5rem ;
+
+}
+
+/* 
 .flex{
     display: flex;
     list-style: none;
@@ -64,4 +125,4 @@ margin-left: 520px;
     height: 40px;
     width: 40px;
     margin: 10px;
-}
+}  */
